# figma-cli-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
references/: comments-workflow.md  figma-api.md  tier-3-contract.md  troubleshooting.md
scripts/: figma
scripts/figma_pat/: __init__.py  cache.py  cli.py  http.py  output.py  refs.py  urls.py
scripts/figma_pat/commands/: comments.py  file.py  node.py  refs_cmd.py  resolve.py  whoami.py
scripts/figma_pat/render/: image_fills.py  images.py
scripts/figma_pat/tiers/: assets.py  node_full.py  page_index.py  summary.py
tests/: conftest.py  test_comments.py  test_node_full.py  test_refs.py  test_urls.py
